--- a/TwoAzureFunctionGithub/TwoAzureFunctionGithub.csproj
+++ b/TwoAzureFunctionGithub/TwoAzureFunctionGithub.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <UserSecretsId>0f676fc3-5da6-45af-8020-6efa7f9b64bc</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
